<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arithmetik</string>
    <string name="tempo">0</string>
    <string name="OpTempo">Time in seconds</string>
    <string name="OpTempoTitle">Time</string>
    <string name="FimTempoJogar">The time is over.&#13;Do you wish to continue?</string>
    <string name="txtBtnJogar">Play</string>
    <string name="title_activity_jogo">Arithmetik</string>
    <string name="txtBtnTreinar">Training</string>
    <string name="txtBtnOpcoes">Options</string>
    <string name="lblPontos">Score</string>
    <string name="opcoes">Options</string>
    <string name="OpSom">Sound On/Off</string>
    <string name="OpNivel">Up to number&#8230;</string>
    <string name="OpApagar">Delete all training questions</string>
    <string name="OpNivelTitle">Level</string>
    <string name="OpSomTitle">Sound</string>
    <string name="OpApagarTitle">Delete</string>
    <string name="OpOperacaoTitle">Operation</string>
    <string name="OpOperacao">Setting the mathematical operation</string>
    <string name="opDisconnectAccountTitle">Disconnect account</string>
    <string name="OpDisconnectAccount">disconnect use account from Google Play</string>
    <string name="AdicaoNaturais">4+5</string>
    <string name="MutiInteiros">3x5</string>
    <string name="AdicaoRelativos">-4+3</string>
    <string name="SubRelativos">-5-(+4)</string>
    <string name="ExpNum">–5+4&#8211;3</string>
    <string name="MultRel">3x(-2)</string>
    <string name="ExpNumMultAd">3x6&#8211;5/3+6x5</string>
    <string name="Divisao">8:2</string>
    <string name="PositiveButtonText">OK</string>
    <string name="NegativeButtonText">Cancel</string>
    <string name="TreinoApagado">Training deleted.</string>
    <string name="NMoreQtions">No more training questions.</string>
    <string name="Level1">1</string>
    <string name="Level2">2</string>
    <string name="Level3">3</string>
    <string name="Level4">4</string>
    <string name="Level5">5</string>
    <string name="Level6">6</string>
    <string name="Level7">7</string>
    <string name="Level8">8</string>
    <string name="Level9">9</string>
    <string name="Level10">10</string>
    <string name="snat">n</string>
    <string name="mult">x</string>
    <string name="soma">+</string>
    <string name="dif">-</string>
    <string name="exp">*</string>
    <string name="multrel">m</string>
    <string name="expmultad">ma</string>
    <string name="divisao">:</string>
    <string name="signin_other_error">ERROR IN SIGN-IN.</string>
    <string name="sign_in_failed">Please check your network connection and try again.</string>
    <string name="players_exception">There was an issue communicating with players.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="leaderboards_exception" translatable="false">There was an issue communicating with leaderboards.</string>
    <string name="achievments_exception" translatable="false">There was an issue communicating with achievments.</string>
    <string name="AlertTempo">Enter a value between 0 and 60.</string>
    <string name="Sim">Yes</string>
    <string name="Nao">No</string>
</resources>
