<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:weightSum="1"
    tools:context="com.aritmetica.rober.arithmetik.Entrada"
    tools:layout_editor_absoluteX="80dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageButton
        android:id="@+id/btnTreinar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="trainning"
        android:src="@mipmap/ic_training"
        android:text="@string/txtBtnTreinar"
        android:textSize="@dimen/BeginButtons"
        android:tint="@color/primaryDarkColor"
        app:layout_constraintBottom_toTopOf="@+id/btnJogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnJogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:baselineAlignBottom="false"
        android:contentDescription="play"
        android:src="@mipmap/ic_play"
        android:text="@string/txtBtnJogar"
        android:textSize="@dimen/BeginButtons"
        android:tint="@color/primaryDarkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnOpcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:padding="10dp"
        android:src="@mipmap/ic_settings"
        android:text="@string/txtBtnOpcoes"
        android:textSize="@dimen/BeginButtons"
        android:tint="@color/secondaryDarkColor"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJogar"
        app:layout_constraintVertical_bias="0.219" />


    <LinearLayout
        android:id="@+id/bottomBarLayout"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcoes">

        <ImageButton
            android:id="@+id/imgBtnConquistas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_achievement" />

        <ImageButton
            android:id="@+id/imgBtnSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_gplaygreen"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/imgBtnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_gplay" />

        <ImageButton
            android:id="@+id/imgBtnRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_leaderboard"
            android:visibility="visible" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
